--- a/fastify-core/package.json
+++ b/fastify-core/package.json
@@ -14,7 +14,9 @@
   "author": "Prakash Banjade",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^5.0.0"
+    "@fastify/postgres": "^6.0.1",
+    "fastify": "^5.0.0",
+    "fastify-plugin": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
