--- a/fastify-core/package.json
+++ b/fastify-core/package.json
@@ -14,7 +14,9 @@
   "author": "Prakash Banjade",
   "license": "ISC",
   "dependencies": {
+    "@fastify/jwt": "^9.0.1",
     "@fastify/postgres": "^6.0.1",
+    "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.1"
   },
