--- a/fastify-nestjs/package.json
+++ b/fastify-nestjs/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@casl/ability": "^6.7.1",
+    "@fastify/static": "^7.0.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
