--- a/fastify-nestjs/package.json
+++ b/fastify-nestjs/package.json
@@ -21,12 +21,14 @@
   },
   "dependencies": {
     "@casl/ability": "^6.7.1",
+    "@fastify/cookie": "^10.0.0",
     "@fastify/static": "^7.0.4",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.4.4",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.4.3",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/throttler": "^6.2.1",
@@ -35,6 +37,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "fastify": "^5.0.0",
+    "fastify-plugin": "^5.0.1",
+    "google-auth-library": "^9.14.1",
     "nanoid": "^3.3.4",
     "nestjs-form-data": "^1.9.91",
     "pg": "^8.13.0",
@@ -47,7 +51,6 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
