--- a/fastify-nestjs/package.json
+++ b/fastify-nestjs/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@casl/ability": "^6.7.1",
-    "@fastify/cookie": "^10.0.0",
+    "@fastify/cookie": "^9.4.0",
     "@fastify/static": "^7.0.4",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
@@ -36,6 +36,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "fastify": "^4.28.1",
     "fastify-plugin": "^5.0.1",
     "google-auth-library": "^9.14.1",
     "nanoid": "^3.3.4",
