--- a/fastify-nestjs/package.json
+++ b/fastify-nestjs/package.json
@@ -22,13 +22,18 @@
   "dependencies": {
     "@casl/ability": "^6.7.1",
     "@fastify/cookie": "^9.4.0",
+    "@fastify/cors": "^10.0.1",
+    "@fastify/csrf-protection": "^7.0.1",
+    "@fastify/helmet": "^12.0.1",
     "@fastify/static": "^7.0.4",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.4",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-fastify": "^10.4.3",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-fastify": "^10.4.4",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/throttler": "^6.2.1",
     "@nestjs/typeorm": "^10.0.2",
@@ -40,6 +45,9 @@
     "google-auth-library": "^9.14.1",
     "nanoid": "^3.3.4",
     "nestjs-form-data": "^1.9.91",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -50,8 +58,11 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
