--- a/fastify-nestjs/package.json
+++ b/fastify-nestjs/package.json
@@ -26,7 +26,6 @@
     "@fastify/csrf-protection": "^7.0.1",
     "@fastify/helmet": "^12.0.1",
     "@fastify/static": "^7.0.4",
-    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.4",
@@ -37,14 +36,18 @@
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/throttler": "^6.2.1",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/handlebars": "^4.0.40",
+    "@types/nodemailer": "^6.4.16",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "fastify": "^4.28.1",
     "fastify-plugin": "^5.0.1",
     "google-auth-library": "^9.14.1",
+    "handlebars": "^4.7.8",
     "nanoid": "^3.3.4",
     "nestjs-form-data": "^1.9.91",
+    "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
